minor alignment fix

--- a/src/Pages/Login/styles.scss
+++ b/src/Pages/Login/styles.scss
@@ -42,6 +42,7 @@
   width: 320px;
   margin: 0 auto;
   margin-top: 40px;
+
   input,
   label {
     width: 100%;
@@ -146,6 +147,17 @@
     font-size: 48px;
     // margin-left: -20px;
   }
+
+  .screenshots {
+    // border: 1px solid red;
+    height: 530px;
+    // line-height: 500px;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+  }
+
   .screen-shot-user {
     width: 50px;
     height: 50px;
