--- a/src/Pages/SignUp/styles.scss
+++ b/src/Pages/SignUp/styles.scss
@@ -10,9 +10,9 @@
 }
 
 .about-content {
-  max-width: 800px;
+  max-width: 700px;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 30px;
   padding: 0px 60px 0px 60px;
   text-align: center;
 
@@ -25,7 +25,7 @@
 
   p {
     line-height: 22px;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: justify;
   }
 
